subprojects {
    group 'ch.unibas.fitting'
    version '1.1.4'

    apply plugin: 'java'

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    sourceCompatibility = 1.9

    repositories {
        mavenCentral()
    }
}

